# gpt-console

./: Cargo.toml  README.md
src/: main.rs  processor.rs
src/models/: gpt.rs
