[package]
name = "gpt-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "2.0.1"
tokio = { version = "1.26.0", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3